<resources>
    <string name="app_name">FriendFriend</string>

    <string name="AddFriend">Add Friend</string>
    <string name="SearchFriend">Search</string>
    <string name="Search">Search</string>
    <string name="Item">Item</string>
    <string name="SentFriendRequest">Sent Friend Request</string>
    <string name="Accecpt">Accecpt</string>
    <string name="Decline">Decline</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Email">Email</string>

    <string name="action_settings">Settings</string>

    <string name="text_add_title">Add Title</string>
    <string name="text_add_description">Add Description</string>
    <string name="text_date">Date</string>
    <string name="text_time">Time</string>
    <string name="switch_day">Day</string>
    <string name="text_until">-</string>
    <string name="text_start_date">Start Date</string>
    <string name="text_end_date">End Date</string>
    <string name="text_start_time">Start Time</string>
    <string name="text_end_time">End Time</string>
    <string name="text_venue">Venue</string>
    <string name="button_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
