<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".schedule.NewEvent">


    <TextView
        android:id="@+id/text_until2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/text_until"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/start_time"
        app:layout_constraintEnd_toStartOf="@+id/end_time"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@+id/start_time"
        app:layout_constraintTop_toTopOf="@+id/start_time"
        app:layout_constraintVertical_bias="0.588"
        android:layout_marginLeft="4dp" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="36dp"
        android:text="@string/text_date"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_add_description"
        android:layout_marginLeft="100dp" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_time"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_date" />

    <TextView
        android:id="@+id/start_date"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/text_start_date"
        android:onClick="clickStartDate"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_date"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/end_date"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/text_end_date"
        android:onClick="clickEndDate"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/start_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_date"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="12dp" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/text_start_time"
        android:onClick="clickStartTime"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_time"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/text_end_time"
        android:onClick="clickEndTime"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/start_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_time"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="12dp" />

    <TextView
        android:id="@+id/text_venue"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/text_venue"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_time" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#33b5e5"
        android:text="@string/button_save"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/switch_day"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/end_date"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="12dp"
        android:gravity="end" />

    <TextView
        android:id="@+id/text_until"
        android:layout_width="11dp"
        android:layout_height="39dp"
        android:text="@string/text_until"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/start_date"
        app:layout_constraintEnd_toStartOf="@+id/end_date"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toEndOf="@+id/start_date"
        app:layout_constraintTop_toTopOf="@+id/start_date"
        app:layout_constraintVertical_bias="0.533" />

    <EditText
        android:id="@+id/input_add_title"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/text_add_title"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_add_description"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:ems="10"
        android:hint="@string/text_add_description"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_add_title" />

    <EditText
        android:id="@+id/input_venue"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_venue" />

</androidx.constraintlayout.widget.ConstraintLayout>